@@ -71,7 +71,7 @@ StatusCode Xsyrk<T>::DoSyrk(const Layout layout, const Triangle triangle, const 
   if (ErrorIn(status)) { return status; }
 
   // Calculates the ceiled versions of n and k
-  auto n_ceiled = Ceil(n, db_["NWG"]);
+  auto n_ceiled = Ceil(Ceil(n, db_["MWG"]), db_["NWG"]);
   auto k_ceiled = Ceil(k, db_["KWG"]);
 
   // Decides which kernel to run: the upper-triangular or lower-triangular version
